@@ -6,6 +6,7 @@ server - GPLv3 - The RainbruRPG's server binary.
    (10 items by revision)
 
 * v0.0.0-0 (14 feb 2012 - ???) FT ??:?? SLOC ???
+- (4) Create a basic asynchronous TCP server waiting for connections
 - Correctly customize logger
 - Now uses logger
 - Improved project setup
