@@ -18,6 +18,18 @@ AC_PROG_CXX
 # Checks for libraries.
 PKG_CHECK_MODULES([LOG], [rainbrurpg-logger > 0])
 
+AC_LANG_CPLUSPLUS
+AC_DEFINE([HAVE_ASIO], [], [Was Asio library found])
+AC_CHECK_HEADER(asio.hpp, AC_DEFINE(HAVE_ASIO), 
+   AC_MSG_ERROR([Can't find Asio library]))
+    AC_CHECK_LIB(boost_filesystem, main, [], [
+      echo "Error! You need to have Boost-filesystem installed."
+      exit -1
+    ])
+    AC_CHECK_HEADER([boost/filesystem/path.hpp], [], [
+      echo "Error! Cannot find the Boost-filesystem headers."
+      exit -1
+    ])
 # Checks for header files.
 
 # Checks for typedefs, structures, and compiler characteristics.
